A fix and test case for Bug#6049 "Loss of sign when using prepared statements and negative time/date values". The bug was in wrong sprintf format used in the client library. The fix moves TIME -> string conversion functions to sql-common and utilized them in the client library.